--- a/src/app/websource/predictions/predictions.component.scss
+++ b/src/app/websource/predictions/predictions.component.scss
@@ -1,8 +1,9 @@
 
-.predictions-container {
+/* .predictions-container {
   width: 100px;
   height: 100px;
   margin: 20px;
   
   background-color: red;
 }
+ */
