--- a/src/app/websource/websource.component.html
+++ b/src/app/websource/websource.component.html
@@ -1,5 +1,6 @@
 <div id="container">
 
-  <app-predictions></app-predictions>
+  <app-predictions *ngIf="predictions"></app-predictions>
+  <app-hypetrain *ngIf="hypeTrain"></app-hypetrain>
 
 </div>
