--- a/src/app/websource/hypetrain/hypetrain.component.scss
+++ b/src/app/websource/hypetrain/hypetrain.component.scss
@@ -3,7 +3,7 @@
   width: 500px;
   height: 500px;
 
-  background-color: red;
+  //background-color: red;
   display: flex;
   align-items: center;
   justify-content: center;
