so much shit, honestly

--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -1,1 +1,2 @@
-<p>main works!</p>
+<mat-slide-toggle [(ngModel)]="settings.api" (change)="toggleApi()">Api</mat-slide-toggle><br>
+<mat-slide-toggle [(ngModel)]="settings.chatbot" (change)="toggleChatBot()">Chatbot</mat-slide-toggle><br>
