--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -1,2 +1,2 @@
-<mat-slide-toggle [(ngModel)]="settings.api" (change)="toggleApi()">Api</mat-slide-toggle><br>
-<mat-slide-toggle [(ngModel)]="settings.chatbot" (change)="toggleChatBot()">Chatbot</mat-slide-toggle><br>
+<mat-slide-toggle [disabled]="data.busy" [(ngModel)]="settings.api" (change)="toggleApi()">Api</mat-slide-toggle><br>
+<mat-slide-toggle [disabled]="data.busy" [(ngModel)]="settings.chatbot" (change)="toggleChatBot()">Chatbot</mat-slide-toggle><br>
