finished implementing per-user settings

--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -1,7 +1,13 @@
-<mat-slide-toggle [disabled]="data.busy" [(ngModel)]="settings.api" (change)="toggleApi()">Api</mat-slide-toggle><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<mat-slide-toggle [disabled]="data.busy || !settings.api">Cheers</mat-slide-toggle><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<mat-slide-toggle [disabled]="data.busy || !settings.api">Hype Trains</mat-slide-toggle><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<mat-slide-toggle [disabled]="data.busy || !settings.api">Subscriptions</mat-slide-toggle><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<mat-slide-toggle [disabled]="data.busy || !settings.api">Gift Subs</mat-slide-toggle><br>
 
-<mat-slide-toggle [disabled]="data.busy" [(ngModel)]="settings.chatbot" (change)="toggleChatBot()">Chatbot</mat-slide-toggle><br>
+<div *ngIf="settings">
+  <mat-slide-toggle [disabled]="data.busy" [(ngModel)]="settings.api.enabled" (change)="toggleApi()">Api</mat-slide-toggle><br>
+  <div *ngFor="let k of object.keys(settings.api.listeners)">
+    &nbsp;&nbsp;&nbsp;&nbsp;<mat-slide-toggle (change)="save()" [(ngModel)]="settings.api.listeners[k]" [disabled]="data.busy || !settings.api.enabled">{{k}}</mat-slide-toggle><br>
+  </div>
+  
+  <mat-slide-toggle [disabled]="data.busy" [(ngModel)]="settings.chatbot.enabled" (change)="toggleChatBot()">Chatbot</mat-slide-toggle><br>
+  <div *ngFor="let k of object.keys(settings.chatbot.categories)">
+    &nbsp;&nbsp;&nbsp;&nbsp;<mat-slide-toggle (change)="save()" [(ngModel)]="settings.chatbot.categories[k]" [disabled]="data.busy || !settings.chatbot.enabled">{{k}}</mat-slide-toggle><br>
+  </div>
+</div>
+
