--- a/src/app/websource/hypetrain/hypetrain.component.html
+++ b/src/app/websource/hypetrain/hypetrain.component.html
@@ -6,7 +6,12 @@
   
   <div>
     volume: {{currentVolume}}&nbsp;
-    <mat-slider min="0" max="1" step="0.1" (change)="onVolumeChange()" [(ngModel)]="currentVolume"></mat-slider>
+    <mat-slider min="0.1" max="1" step="0.1" (change)="onVolumeChange()" [(ngModel)]="currentVolume"></mat-slider>
+  </div>
+
+  <div>
+    fading length: {{fadingLength}} secs&nbsp;
+    <mat-slider min="10" max="180" step="10" [disabled]="fader" [(ngModel)]="fadingLength"></mat-slider>
   </div>
 
   <div class="lvl-indicator-container">
