--- a/src/app/websource/hypetrain/hypetrain.component.html
+++ b/src/app/websource/hypetrain/hypetrain.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div>
-    runs before <b>success</b> fading: {{runsBeforeCompleted}}&nbsp;
+    runs of 4 before 5: {{runsBeforeCompleted}}&nbsp;
     <mat-slider min="1" max="10" step="1" [disabled]="currentLevel>=6" [(ngModel)]="runsBeforeCompleted"></mat-slider>
   </div>
   <div>
