--- a/src/app/auth/token/token.component.html
+++ b/src/app/auth/token/token.component.html
@@ -1,1 +1,9 @@
-<p>{{message}}</p>
+
+
+<nb-card size="small">
+  <nb-card-header>Login With Twitch</nb-card-header>
+  <nb-card-body>
+    {{message}}
+  </nb-card-body>
+</nb-card>
+
