--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -4,7 +4,11 @@
     <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
-    <a class="logo" href="#" (click)="navigateHome()">elthabot</a>
+    
+    <a class="logo" href="#" (click)="navigateHome()">
+      <img src="assets/brand/logo-white.svg" alt="ccarbn">
+      cCarbn
+    </a>
   </div>
 </div>
 
