--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -49,6 +49,10 @@
       @include nb-rtl(border-right, 1px solid nb-theme(divider-color));
       white-space: nowrap;
       text-decoration: none;
+
+      img {
+        height: 3rem;
+      }
     }
   }
 
