removed material from project

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -7,7 +7,7 @@
     
     <a class="logo" href="#" (click)="navigateHome()">
       <img src="assets/brand/logo-white.svg" alt="ccarbn">
-      cCarbn
+      <span>cCarbn</span>
     </a>
   </div>
 </div>
