--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="settings">
+<!-- <div *ngIf="settings">
   <mat-slide-toggle [disabled]="data.busy" [(ngModel)]="settings.api.enabled" (change)="toggleApi()">Api</mat-slide-toggle><br>
   <div *ngFor="let k of object.keys(settings.api.listeners)" style="margin-left: 1rem;">
     <mat-slide-toggle style="width:150px;" (change)="save()" [(ngModel)]="settings.api.listeners[k]" [disabled]="data.busy || !settings.api.enabled">{{k}}</mat-slide-toggle>
@@ -12,3 +12,4 @@
   </div>
 </div>
 
+ -->
