--- a/src/themes.scss
+++ b/src/themes.scss
@@ -14,5 +14,22 @@ $nb-themes: nb-register-theme((
   // color-primary-700: #1a34b8,
   // color-primary-800: #102694,
   // color-primary-900: #091c7a,
+  
 
 ), dark, dark);
+
+
+//Workaround until they fix https://github.com/akveo/nebular/issues/2119
+::-webkit-scrollbar {
+  width: 0.4rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background:  nb-theme(background-basic-color-4);
+  cursor: pointer;
+  border-radius: 0.4rem;
+}
+
+::-webkit-scrollbar-track {
+  background: nb-theme(background-basic-color-2);
+}
