--- a/src/app/dashboard/home/home.component.scss
+++ b/src/app/dashboard/home/home.component.scss
@@ -9,6 +9,8 @@
     justify-content: space-evenly;
     align-items: flex-start;
     width: 100%;
+    max-width: 1200px;
+    margin: auto;
   }
 
   nb-card {
@@ -21,7 +23,7 @@
     padding-left: 3rem;
   }
 
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(lg) {
     .container {
       flex-direction: column;
       align-items: center;
