better login and added user picture fetch

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,8 +1,9 @@
 <span class="created-by">
- Created with <nb-icon icon="heart"></nb-icon> by <b><a href="https://twitch.tv/eltharynd" target="_blank">twitch.tv/eltharynd</a></b>. <small>© {{year}}</small>
+ <small>©</small> {{year}} eltharynd
 </span>
 <div class="socials">
-  <a href="https://www.github.com/eltharynd/cCarbn" target="_blank"><nb-icon icon="github-outline"></nb-icon></a>
-  
-  <a href="https://github.com/sponsors/eltharynd" target="_blank"><nb-icon icon="heart-outline"></nb-icon> Sponsor</a>
+  <a href="https://twitch.tv/eltharynd" target="_blank"><i class="fab fa-twitch"></i></a>
+  <a href="https://www.github.com/eltharynd/cCarbn" target="_blank"><i class="fab fa-github"></i></a>
+  <a href="https://www.github.com/eltharynd/cCarbn" target="_blank"><i class="fab fa-discord"></i></a>
+  <a href="https://github.com/sponsors/eltharynd" target="_blank"><i class="fas fa-donate"></i></a>
 </div>
