--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,8 +4,8 @@
   <nb-card-header>Login With Twitch</nb-card-header>
 
   <nb-card-body *ngIf="!auth.currentUser">
-    <p *ngIf="message">{{message}}</p>
-    <button [disabled]="message?true:false" [nbSpinner]="message?true:false" status="primary" nbButton (click)="loginWithTwitch()" color="primary">LOG IN</button>
+    <p *ngIf="message || !data._clientId">{{message ? message : 'We seem to be experiencing server issues.. Attempting to reconnect...'}}</p>
+    <button [disabled]="(message?true:false) || !data._clientId" [nbSpinner]="message?true:false" status="primary" nbButton (click)="loginWithTwitch()" color="primary">LOG IN</button>
   </nb-card-body>
 
   <nb-card-body *ngIf="auth.currentUser">
