temporarily re-enabled angular for websources

--- a/src/app/dashboard/home/home.component.scss
+++ b/src/app/dashboard/home/home.component.scss
@@ -21,6 +21,9 @@
 
   nb-list-item {
     padding-left: 3rem;
+    padding-right: 2rem;
+    display: flex;
+    justify-content: space-between;
   }
 
   @include media-breakpoint-down(lg) {
