corrected discord invite

--- a/src/app/common/footer/footer.component.scss
+++ b/src/app/common/footer/footer.component.scss
@@ -19,6 +19,7 @@
     
     a {
       padding: 0.4rem;
+      padding-left: 0.8rem;
       color: nb-theme(text-hint-color);
       transition: color ease-out 0.1s;
 
