--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -4,6 +4,6 @@
 <div class="socials">
   <a href="https://twitch.tv/eltharynd" target="_blank"><i class="fab fa-twitch"></i></a>
   <a href="https://www.github.com/eltharynd/cCarbn" target="_blank"><i class="fab fa-github"></i></a>
-  <a href="https://www.github.com/eltharynd/cCarbn" target="_blank"><i class="fab fa-discord"></i></a>
+  <a href="https://discord.gg/uTmEUxGHKC" target="_blank"><i class="fab fa-discord"></i></a>
   <a href="https://github.com/sponsors/eltharynd" target="_blank"><i class="fas fa-donate"></i></a>
 </div>
