--- a/src/app/websource/hypetrain/hypetrain.component.scss
+++ b/src/app/websource/hypetrain/hypetrain.component.scss
@@ -1,23 +1,36 @@
+@import '../../../themes.scss';
+
 
 .container {
-  width: 500px;
-  height: 500px;
-
-  //background-color: red;
-  display: flex;
+  background-color: white;
+/*   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
+}
+  
+  
+.controls {
+  display: flex; 
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center;
+
+  color: nb-theme(text-basic-color);
+
+  .lvl-indicator-container {
+    width: 45%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .lvl-indicator-container > * {
+    margin: 2px;
+    pointer-events: none;
+  }
+
 }
 
-.lvl-indicator-container {
-  width: 45%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.lvl-indicator-container > * {
-  margin: 2px;
-  pointer-events: none;
-}
+
+
