--- a/src/app/websource/hypetrain/hypetrain.component.html
+++ b/src/app/websource/hypetrain/hypetrain.component.html
@@ -1,57 +1,152 @@
 
-<div class="container" [ngStyle]="{width: viewPort.width+'px', height: viewPort.height+'px'}">
+<div class="viewport" [ngStyle]="{width: viewport.width+'px', height: viewport.height+'px'}" [class.background]="viewport.background" [class.dark]="viewport.dark">
 
-    <hypetrain-locomotive [coordinates]="{x: 200, y: 150}" 
+    <hypetrain-locomotive *ngIf="currentLevel>0"
+                          [viewport]="viewport"
+                          [coordinates]="train.start" 
+                          [size]="train.locomotive.size"
+                          [scale]="train.locomotive.scale"
+                          [pictureBounds]="train.locomotive.pictureBounds"
+                          [carriages]="carriages"
                           [user]="{name: 'eltharynd', picture:'https://static-cdn.jtvnw.net/jtv_user_pictures/1148a899-e070-4a33-8d06-9cb84b9d2a38-profile_image-300x300.png'}">
     </hypetrain-locomotive>
 
+    <div class="viewport-anchor" [ngStyle]="{width: viewport.width+'px', height: viewport.height+'px'}"></div>
 </div>
 
+<div class="settings"  [ngStyle]="{width: viewport.width+'px'}">
 
-<div class="controls"  [ngStyle]="{width: viewPort.width}">
-  <div>
-    volume: {{currentVolume}}&nbsp;
-    <mat-slider min="0.1" max="1" step="0.1" (change)="onVolumeChange()" [(ngModel)]="currentVolume"></mat-slider>
-  </div>
+  <div class="window">
+    <h3>VIEWPORT</h3>
+    <mat-form-field>
+      <input matInput type="number" placeholder="Width" [(ngModel)]="viewport.width">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput type="number" placeholder="Height" [(ngModel)]="viewport.height">
+    </mat-form-field>
 
-  <div>
-    runs of 4 before 5: {{runsBeforeCompleted}}&nbsp;
-    <mat-slider min="1" max="10" step="1" [disabled]="currentLevel>=6" [(ngModel)]="runsBeforeCompleted"></mat-slider>
-  </div>
-  <div>
-    <b>failed</b> fading duration: {{fadingLength}} secs&nbsp;
-    <mat-slider min="10" max="180" step="10" [disabled]="fader" [(ngModel)]="fadingLength"></mat-slider>
-  </div>
+    <h3>COORDINATES</h3>
+    <mat-form-field>
+      <input matInput type="number" placeholder="Left (px)" [(ngModel)]="train.start.x">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput type="number" placeholder="Top (px)" [(ngModel)]="train.start.y">
+    </mat-form-field>
 
-  <div class="lvl-indicator-container">
-    <button mat-raised-button color="accent" [disabled]="loops['lvl1']?._volume<=0">lvl1</button>
-    <button mat-raised-button color="accent" [disabled]="loops['lvl2']?._volume<=0">lvl2</button>
-    <button mat-raised-button color="accent" [disabled]="loops['lvl3']?._volume<=0">lvl3</button>
-    <button mat-raised-button color="accent" [disabled]="loops['lvl4']?._volume<=0">lvl4{{transitioning ? '->' : ''}}</button>
-    <button mat-raised-button color="accent" [disabled]="loops['lvl5']?._volume<=0">{{transitioning ? '->' : ''}}lvl5</button>
-    <button mat-raised-button color="accent" [disabled]="!(fader || timeout)">fade</button>
-  </div>
-  <div>
-    level: {{currentLevel>0 ? currentLevel<6 ? currentLevel : 'ending' : 'none'}}&nbsp;
-    <mat-slider [disabled]="transitioning || currentLevel===6 || now - changedAt <= 500" [min]="0" max="6" step="1" (change)="prematureEnd = lastLevel!==5; onLevelChange()" [(ngModel)]="currentLevel"></mat-slider>
-  </div>
-  <div>
-    <button mat-raised-button color="accent" [disabled]="currentLevel>=6 ||currentLevel===0" (click)="currentLevel = 6; prematureEnd = true; onLevelChange()">fail (end)</button>
-    &nbsp;&nbsp;
-    <button mat-raised-button color="accent" [disabled]="currentLevel<6" (click)="endNow()">stop fade</button>
+
+    <h3>PREVIEW ONLY<br><small>(won't show in OBS)</small></h3>
+    <div>Background&nbsp;&nbsp;&nbsp;<mat-slide-toggle [(ngModel)]="viewport.background">{{viewport.background ? 'ON' : 'OFF'}}</mat-slide-toggle></div>
+    <div>Mode: <mat-slide-toggle [(ngModel)]="viewport.dark">{{viewport.dark ? 'Dark' : 'Light'}}</mat-slide-toggle></div>
   </div>
 
-  <br>
-
-  <div>
-    percentage: {{percentage}}
-  </div>
-  <div>
-    expiry: {{ expiryDate>0 ? ((expiryDate - now) | date: 'm.ss.SSS') : '---'}}
+  <div class="audio">
+    <h3>AUDIO</h3>
+    <div>
+      volume: {{currentVolume}}&nbsp;
+      <mat-slider min="0.1" max="1" step="0.1" (change)="onVolumeChange()" [(ngModel)]="currentVolume"></mat-slider>
+    </div>
+  
+    <div>
+      runs of 4 before 5: {{runsBeforeCompleted}}&nbsp;
+      <mat-slider min="1" max="10" step="1" [disabled]="currentLevel>=6" [(ngModel)]="runsBeforeCompleted"></mat-slider>
+    </div>
+    <div>
+      <b>failed</b> fading duration: {{fadingLength}} secs&nbsp;
+      <mat-slider min="10" max="180" step="10" [disabled]="fader" [(ngModel)]="fadingLength"></mat-slider>
+    </div>
+  
+    <div class="lvl-indicator-container">
+      <button mat-raised-button color="accent" [disabled]="loops['lvl1']?._volume<=0">lvl1</button>
+      <button mat-raised-button color="accent" [disabled]="loops['lvl2']?._volume<=0">lvl2</button>
+      <button mat-raised-button color="accent" [disabled]="loops['lvl3']?._volume<=0">lvl3</button>
+      <button mat-raised-button color="accent" [disabled]="loops['lvl4']?._volume<=0">lvl4{{transitioning ? '->' : ''}}</button>
+      <button mat-raised-button color="accent" [disabled]="loops['lvl5']?._volume<=0">{{transitioning ? '->' : ''}}lvl5</button>
+      <button mat-raised-button color="accent" [disabled]="!(fader || timeout)">fade</button>
+    </div>
+    <div>
+      level: {{currentLevel>0 ? currentLevel<6 ? currentLevel : 'ending' : 'none'}}&nbsp;
+      <mat-slider [disabled]="transitioning || currentLevel===6 || now - changedAt <= 500" [min]="0" max="6" step="1" (change)="prematureEnd = lastLevel!==5; onLevelChange()" [(ngModel)]="currentLevel"></mat-slider>
+    </div>
+    <div>
+      <button mat-raised-button color="accent" [disabled]="currentLevel>=6 ||currentLevel===0" (click)="currentLevel = 6; prematureEnd = true; onLevelChange()">fail (end)</button>
+      &nbsp;&nbsp;
+      <button mat-raised-button color="accent" [disabled]="currentLevel<6" (click)="endNow()">stop fade</button>
+    </div>
+  
+    <br>
+  
+    <div>
+      percentage: {{percentage}}
+    </div>
+    <div>
+      expiry: {{ expiryDate>0 ? ((expiryDate - now) | date: 'm.ss.SSS') : '---'}}
+    </div>
   </div>
   
+  <div class="train">
+    <h3>TRAIN</h3>
+    <button mat-raised-button color="accent" (click)="addCarriage()" [disabled]="currentLevel<1">ADD CARRIAGE</button><br>
+    <div>Linked scale: <mat-slide-toggle [(ngModel)]="scaleLinked"></mat-slide-toggle></div>
+
+    <h3>LOCOMOTIVE</h3>
+      <div class="picture-outer">
+        <div class="picture-inner">
+          <mat-form-field>
+            <input matInput type="number" placeholder="Original Width (px)" [disabled]="true" [(ngModel)]="train.locomotive.size.width">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput type="number" placeholder="Picture Width (px)" [disabled]="true" [(ngModel)]="train.locomotive.pictureBounds.width">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput type="number" placeholder="Picture Left (px)" [disabled]="true" [(ngModel)]="train.locomotive.pictureBounds.left">
+          </mat-form-field>
+        </div>
+        <div class="picture-inner">
+          <mat-form-field>
+            <input matInput type="number" placeholder="Original Height (px)" [disabled]="true" [(ngModel)]="train.locomotive.size.height">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput type="number" placeholder="Picture Height (px)" [disabled]="true" [(ngModel)]="train.locomotive.pictureBounds.height">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput type="number" placeholder="Picture Top (px)" [disabled]="true" [(ngModel)]="train.locomotive.pictureBounds.top">
+          </mat-form-field>
+        </div>
+      </div>
+      <div>
+        Locomotive scale: {{train.locomotive.scale}}&nbsp;
+        <mat-slider min=".1" max="2" step=".1" (change)="scaleChange()" [(ngModel)]="train.locomotive.scale"></mat-slider>
+      </div>
+
+    <h3>CARRIAGE</h3>
+    <div class="picture-outer">
+      <div class="picture-inner">
+        <mat-form-field>
+          <input matInput type="number" placeholder="Original Width (px)" [disabled]="true" [(ngModel)]="train.carriage.size.width">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput type="number" placeholder="Picture Width (px)" [disabled]="true" [(ngModel)]="train.carriage.pictureBounds.width">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput type="number" placeholder="Picture Left (px)" [disabled]="true" [(ngModel)]="train.carriage.pictureBounds.left">
+        </mat-form-field>
+      </div>
+      <div class="picture-inner">
+        <mat-form-field>
+          <input matInput type="number" placeholder="Original Height (px)" [disabled]="true" [(ngModel)]="train.carriage.size.height">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput type="number" placeholder="Picture Height (px)" [disabled]="true" [(ngModel)]="train.carriage.pictureBounds.height">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput type="number" placeholder="Picture Top (px)" [disabled]="true" [(ngModel)]="train.carriage.pictureBounds.top">
+        </mat-form-field>
+      </div>
+    </div>
+    <div>
+      Carriage scale: {{train.carriage.scale}}&nbsp;
+      <mat-slider min=".1" max="2" step=".1" (change)="scaleChange(true)" [(ngModel)]="train.carriage.scale"></mat-slider>
+    </div>
+  </div>
+
 </div>
-
-
-
-
