--- a/src/app/websource/hypetrain/hypetrain.component.scss
+++ b/src/app/websource/hypetrain/hypetrain.component.scss
@@ -1,22 +1,64 @@
 @import '../../../themes.scss';
 
 
-.container {
-  background-color: white;
-/*   display: flex;
-  align-items: center;
-  justify-content: center; */
+.viewport.background {
+    background-color: white;
+    background-image:
+      linear-gradient(45deg, #ccc 25%, transparent 25%), 
+      linear-gradient(135deg, #ccc 25%, transparent 25%),
+      linear-gradient(45deg, transparent 75%, #ccc 75%),
+      linear-gradient(135deg, transparent 75%, #ccc 75%);
+    background-size:25px 25px; /* Must be a square */
+    background-position:0 0, 12.5px 0, 12.5px -12.5px, 0px 12.5px; /* Must be half of one side of the square */
 }
-  
-  
-.controls {
+
+.viewport.background.dark {
+  background-color: dimgray;
+  background-image:
+    linear-gradient(45deg, #292929 25%, transparent 25%), 
+    linear-gradient(135deg, #292929 25%, transparent 25%),
+    linear-gradient(45deg, transparent 75%, #292929 75%),
+    linear-gradient(135deg, transparent 75%, #292929 75%);
+  background-size:25px 25px; /* Must be a square */
+  background-position:0 0, 12.5px 0, 12.5px -12.5px, 0px 12.5px; /* Must be half of one side of the square */
+}
+
+.settings {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  padding: 0.5rem;
+  background-color: #222b45;
+  z-index: 1;
+}
+
+.settings > div {
   display: flex; 
   flex-direction: column; 
-  justify-content: center; 
+  justify-content: flex-start; 
   align-items: center;
+  width: 33%;
+
+  padding: 1rem 0;
+  border: 1px solid nb-theme(text-hint-color);
+  border-radius: 5px;
 
   color: nb-theme(text-basic-color);
 
+  > h3 {
+    text-align: center;
+    color: nb-theme(text-hint-color);
+    font-weight: bold;
+  }
+
+  > h3:not(:first-child) {
+    margin-top: 1rem;
+  }
+}
+
+
+.audio {
+  
   .lvl-indicator-container {
     width: 45%;
     display: flex;
@@ -34,3 +76,15 @@
 
 
 
+.picture-outer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 0.5rem;
+
+  .picture-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0.5rem;
+  }
+}
