carraiges with events

--- a/src/app/websource/hypetrain/hypetrain.component.html
+++ b/src/app/websource/hypetrain/hypetrain.component.html
@@ -8,7 +8,7 @@
                           [scale]="train.locomotive.scale"
                           [pictureBounds]="train.locomotive.pictureBounds"
                           [carriages]="carriages"
-                          [user]="{name: 'eltharynd', picture:'https://static-cdn.jtvnw.net/jtv_user_pictures/1148a899-e070-4a33-8d06-9cb84b9d2a38-profile_image-300x300.png'}">
+                          [user]="{name: 'eltharynd', picture: channelPic}">
     </hypetrain-locomotive>
 
     <div class="viewport-anchor" [ngStyle]="{width: viewport.width+'px', height: viewport.height+'px'}"></div>
